--- a/css/custom.css
+++ b/css/custom.css
@@ -305,4 +305,32 @@ li {
   .rs-service-container h6 {
     font-size: 20px !important;
   }
+  .rs-hide-sm {
+    display: none;
+  }
+}
+.rs-social-icons-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.rs-social-icons-container .rs-social-icon i  {
+  width: 25px; height:25px;
+}
+
+
+
+.rs-blink {
+  font-size: 25px;
+  font-family: cursive;
+  color: white;
+  animation: blink 1s linear infinite;
+}
+@keyframes blink{
+  0%{opacity: 0;}
+  50%{opacity: .5;}
+  100%{opacity: 1;}
 }
