--- a/css/custom.css
+++ b/css/custom.css
@@ -178,7 +178,7 @@
 }
 
 .rs-breakup-image {
-  background-image: url("../images/breakup.png") !important;
+  background-image: url("https://www.onlinecounselling4u.com/blog/wp-content/uploads/2020/11/breakup-counselling.jpg") !important;
   background-size: 100% 100% !important;
   background-repeat: no-repeat !important;
   /* max-height: 400 !important;
@@ -307,6 +307,28 @@ li {
   }
   .rs-hide-sm {
     display: none;
+  }
+}
+.rs-social-icons-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.rs-social-icons-container .rs-social-icon i  {
+  width: 25px; height:25px;
+}
+
+
+
+@media  (max-width: 1000px) {
+  .rs-header .rs-header-title {
+    font-size: 18px !important;
+  }
+  .top-nav button.navbar-toggler {
+    display: none !important;
   }
 }
 .rs-social-icons-container {
